the footer is now sticking, I've added in the code reference from Materialize. I've spotted a small overlap on the book images in mobile view, which I am trying to correct now

--- a/bookreviews/static/css/style.css
+++ b/bookreviews/static/css/style.css
@@ -109,7 +109,7 @@ img {
 }
 
 /*-------------------------------------------------------------- Footer */
-
+/* Sticky footer code via Materialize */
 body {
     display: flex;
     min-height: 100vh;
@@ -193,8 +193,8 @@ body {
     .image-column {
         float: left;
         width: 16.66%;
-        padding: 5px;
-        padding-left: 2%;
+        padding: 1px;
+        padding-left: 1%;
     }
   
     /* Clear floats after image containers */
